# freeipa-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/freeipa_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/freeipa_mcp/tools/: __init__.py  certs.py  dns.py  groups.py  hbac.py  hosts.py  sudo.py  users.py
tests/: __init__.py  conftest.py  test_certs.py  test_client.py  test_config.py  test_dns.py  test_groups.py  test_hbac.py  test_hosts.py  test_sudo.py  test_users.py
