[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freeipa-mcp"
version = "0.1.0"
description = "MCP server for FreeIPA identity management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Klaus" }
]
keywords = ["mcp", "freeipa", "identity", "ipa", "ldap", "kerberos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = [
    "mcp>=1.0.0",
    "python-freeipa>=1.0.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
freeipa-mcp = "freeipa_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/tntclaus/freeipa-mcp"
Repository = "https://github.com/tntclaus/freeipa-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/freeipa_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
